--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   },
   "devDependencies": {
     "@types/jest": "^25.1.4",
+    "@types/node-fetch": "^2.5.5",
     "@types/webpack": "^4.41.6",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
     "@typescript-eslint/eslint-plugin-tslint": "^2.23.0",
@@ -60,11 +61,13 @@
     "cpx": "latest",
     "eslint": "^6.8.0",
     "jest": "^25.1.0",
+    "node-fetch": "^2.6.0",
     "rimraf": "^3.0.2",
     "rm-cstyle-cmts": "latest",
     "terser-webpack-plugin": "^2.3.5",
     "ts-jest": "^25.2.1",
     "ts-loader": "^6.2.1",
+    "tslint": "^6.1.1",
     "typescript": "^3.8.3",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11"
