--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mini-semaphore",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "A lightweight version of Semaphore",
   "private": false,
   "main": "./cjs/index.js",
@@ -21,6 +21,10 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jeffy-g/mini-semaphore.git"
+  },
+  "engines": {
+    "node": ">=10",
+    "yarn": "^1.22.4"
   },
   "files": [
     "package.json",
@@ -59,19 +63,19 @@
     "@types/jest": "^25.2.1",
     "@types/node-fetch": "^2.5.7",
     "@types/webpack": "^4.41.12",
-    "@typescript-eslint/eslint-plugin": "^2.29.0",
-    "@typescript-eslint/eslint-plugin-tslint": "^2.29.0",
-    "@typescript-eslint/parser": "^2.29.0",
+    "@typescript-eslint/eslint-plugin": "^2.31.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^2.31.0",
+    "@typescript-eslint/parser": "^2.31.0",
     "cpx": "latest",
     "eslint": "^6.8.0",
-    "jest": "^25.4.0",
+    "jest": "^26.0.1",
     "node-fetch": "^2.6.0",
     "rimraf": "^3.0.2",
-    "rm-cstyle-cmts": "latest",
+    "rm-cstyle-cmts": "2.4.0",
     "terser-webpack-plugin": "^3.0.0",
     "ts-jest": "^25.4.0",
-    "ts-loader": "^7.0.1",
-    "tslint": "^6.1.1",
+    "ts-loader": "^7.0.2",
+    "tslint": "^6.1.2",
     "typescript": "^3.8.3",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
