--- a/package.json
+++ b/package.json
@@ -47,11 +47,12 @@
   ],
   "scripts": {
     "all": "yarn clean && yarn lint && yarn dist && yarn webpack && yarn copy:types",
-    "build": "tsc",
+    "build": "concurrently \"tsc\" \"yarn build:esm\"",
     "build:esm": "tsc -p src/tsconfig.json && node ./scripts/tools -cmd rmc -basePath ./build/esm -test \"/.js$/\"",
     "clean": "rimraf build/* dist/* logs/*.tsbuildinfo",
-    "copy:types": "cpx -v src/index.d.ts dist && cpx -v src/index.d.ts dist/cjs && cpx -v src/index.d.ts dist/esm && cpx -v src/index.d.ts dist/umd && cpx -v src/index.d.ts dist/webpack",
-    "dist": "rimraf \"dist/!(webpack)\" && yarn build && yarn build:esm && cpx -v \"./{package.json,README.md,LICENSE}\" dist && cpx -v \"./build/**/*.js\" dist",
+    "copy:dts": "cpx -v src/index.d.ts",
+    "copy:types": "concurrently  \"yarn copy:dts dist\" \"yarn copy:dts dist/cjs\" \"yarn copy:dts dist/esm\" \"yarn copy:dts dist/umd\" \"yarn copy:dts dist/webpack\"",
+    "dist": "rimraf \"dist/!(webpack)\" && yarn build && cpx -v \"./{package.json,README.md,LICENSE}\" dist && cpx -v \"./build/**/*.js\" dist",
     "inst:clean": "rimraf yarn.lock node_modules && yarn install",
     "lint": "eslint src/**/*.ts",
     "test": "jest --coverage --silent=false -c=jest.config.js",
@@ -66,6 +67,7 @@
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/eslint-plugin-tslint": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
+    "concurrently": "^5.2.0",
     "cpx": "latest",
     "eslint": "^7.0.0",
     "jest": "^26.0.1",
