--- a/package.json
+++ b/package.json
@@ -48,15 +48,15 @@
   "scripts": {
     "all": "yarn clean && yarn lint && yarn dist && yarn webpack && yarn copy:types",
     "build": "concurrently \"tsc\" \"yarn build:esm\"",
-    "build:esm": "tsc -p src/tsconfig.json && node ./scripts/tools -cmd rmc -basePath ./build/esm -test \"/.js$/\"",
+    "build:esm": "tsc -p src/tsconfig.json",
     "clean": "rimraf build/* dist/* logs/*.tsbuildinfo",
     "copy:dts": "cpx -v src/index.d.ts",
     "copy:types": "concurrently  \"yarn copy:dts dist\" \"yarn copy:dts dist/cjs\" \"yarn copy:dts dist/esm\" \"yarn copy:dts dist/umd\" \"yarn copy:dts dist/webpack\"",
-    "dist": "rimraf \"dist/!(webpack)\" && yarn build && cpx -v \"./{package.json,README.md,LICENSE}\" dist && cpx -v \"./build/**/*.js\" dist",
-    "inst:clean": "rimraf yarn.lock node_modules && yarn install",
+    "dist": "rimraf \"dist/!(webpack)\" && yarn build && cpx -v \"./{README.md,LICENSE}\" dist && cpx -v \"./build/**/*.js\" dist && orgpkg -p -k defs, -o dist",
+    "ic": "rimraf yarn.lock node_modules && yarn install",
     "lint": "eslint src/**/*.ts",
     "test": "jest --coverage --silent=false -c=jest.config.js",
-    "update:packages": "yarn upgrade-interactive --latest",
+    "up": "yarn upgrade-interactive --latest",
     "webpack": "rimraf ./dist/webpack/* ./dist/umd/* && npx webpack && yarn webpack:strip && cpx -v \"./dist/*.d.ts\" ./dist/webpack/",
     "webpack:strip": "node ./scripts/tools -cmd stripWebpack -regex \"%npm_package_defs_regex%\""
   },
@@ -73,7 +73,7 @@
     "jest": "^26.0.1",
     "node-fetch": "^2.6.0",
     "rimraf": "^3.0.2",
-    "rm-cstyle-cmts": "3.2.7",
+    "organize-pkg": "^1.2.2",
     "terser-webpack-plugin": "^3.0.5",
     "ts-jest": "^26.1.0",
     "ts-loader": "^7.0.5",
