--- a/renovate.json
+++ b/renovate.json
@@ -5,9 +5,9 @@
     "statusCheckVerify": true,
     "automerge": true,
     "automergeType": "branch",
-    "rangeStrategy": "bump",
-    "bumpVersion": "patch",
+    "rangeStrategy": "replace",
     "minor": {
         "groupName": "all dependencies"
-    }
+    },
+    "commitBody": "[skip ci]"
 }
