--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
   ],
   "scripts": {
     "all": "yarn clean && yarn lint && yarn dist && yarn webpack && yarn copy:types",
-    "build": "concurrently \"tsc\" \"yarn build:esm\"",
+    "build": "concurrently -n tsc,build:esm -c blue,yellow \"tsc\" \"yarn build:esm\"",
     "build:esm": "tsc -p src/tsconfig.json",
     "clean": "rimraf build/* dist/* logs/*.tsbuildinfo",
     "copy:dts": "cpx -v src/index.d.ts",
@@ -64,18 +64,17 @@
     "@types/jest": "^26.0.14",
     "@types/node-fetch": "^2.5.7",
     "@types/webpack": "^4.41.22",
-    "@typescript-eslint/eslint-plugin": "^4.1.1",
-    "@typescript-eslint/eslint-plugin-tslint": "^4.1.1",
-    "@typescript-eslint/parser": "^4.1.1",
+    "@typescript-eslint/eslint-plugin": "^4.3.0",
+    "@typescript-eslint/parser": "^4.3.0",
     "concurrently": "^5.3.0",
     "cpx": "latest",
-    "eslint": "^7.9.0",
+    "eslint": "^7.10.0",
     "jest": "^26.4.2",
     "node-fetch": "^2.6.1",
     "organize-pkg": "^1.2.3",
     "rimraf": "^3.0.2",
     "terser-webpack-plugin": "^4.2.2",
-    "ts-jest": "^26.3.0",
+    "ts-jest": "^26.4.1",
     "ts-loader": "^8.0.4",
     "tslint": "^6.1.3",
     "typescript": "^4.0.3",
