--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mini-semaphore",
-  "version": "1.3.3",
+  "version": "1.3.4",
   "description": "A lightweight version of Semaphore",
   "private": false,
   "main": "./cjs/index.js",
@@ -54,31 +54,30 @@
     "copy:types": "concurrently  \"yarn copy:dts dist\" \"yarn copy:dts dist/cjs\" \"yarn copy:dts dist/esm\" \"yarn copy:dts dist/umd\" \"yarn copy:dts dist/webpack\"",
     "dist": "rimraf \"dist/!(webpack)\" && yarn build && cpx -v \"./{README.md,LICENSE}\" dist && cpx -v \"./build/**/*.js\" dist && orgpkg -p -k defs, -o dist",
     "ic": "rimraf yarn.lock node_modules && yarn install",
+    "up": "yarn upgrade-interactive --latest",
     "lint": "eslint src/**/*.ts",
     "test": "jest --coverage --silent=false -c=jest.config.js",
-    "up": "yarn upgrade-interactive --latest",
     "webpack": "rimraf ./dist/webpack/* ./dist/umd/* && npx webpack && yarn webpack:strip && cpx -v \"./dist/*.d.ts\" ./dist/webpack/",
     "webpack:strip": "node ./scripts/tools -cmd stripWebpack -regex \"%npm_package_defs_regex%\""
   },
   "devDependencies": {
-    "@types/jest": "^26.0.14",
-    "@types/node-fetch": "^2.5.7",
-    "@types/webpack": "^4.41.22",
-    "@typescript-eslint/eslint-plugin": "^4.3.0",
-    "@typescript-eslint/parser": "^4.3.0",
-    "concurrently": "^5.3.0",
+    "@types/jest": "^27.4.0",
+    "@types/node-fetch": "^2.6.1",
+    "@types/webpack": "^5.28.0",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
+    "concurrently": "^7.0.0",
     "cpx": "latest",
-    "eslint": "^7.10.0",
-    "jest": "^26.4.2",
-    "node-fetch": "^2.6.1",
+    "eslint": "^8.9.0",
+    "jest": "^27.5.1",
+    "node-fetch": "=2.6.7",
     "organize-pkg": "^1.2.3",
     "rimraf": "^3.0.2",
-    "terser-webpack-plugin": "^4.2.2",
-    "ts-jest": "^26.4.1",
-    "ts-loader": "^8.0.4",
-    "tslint": "^6.1.3",
-    "typescript": "^4.0.3",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12"
+    "terser-webpack-plugin": "^5.3.1",
+    "ts-jest": "^27.1.3",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.5.5",
+    "webpack": "^5.69.1",
+    "webpack-cli": "^4.9.2"
   }
 }
