--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mini-semaphore",
-  "version": "1.3.4",
+  "version": "1.3.7",
   "description": "A lightweight version of Semaphore",
   "private": false,
   "main": "./cjs/index.js",
@@ -23,7 +23,7 @@
     "url": "git+https://github.com/jeffy-g/mini-semaphore.git"
   },
   "engines": {
-    "node": ">=10",
+    "node": ">=v12.22.10",
     "yarn": "^1.22.4"
   },
   "files": [
@@ -56,13 +56,12 @@
     "ic": "rimraf yarn.lock node_modules && yarn install",
     "up": "yarn upgrade-interactive --latest",
     "lint": "eslint src/**/*.ts",
-    "test": "jest --coverage --silent=false -c=jest.config.js",
+    "test": "bash -c \"NODE_OPTIONS=--experimental-vm-modules npx jest --coverage --silent=false -c=jest.config.js\"",
     "webpack": "rimraf ./dist/webpack/* ./dist/umd/* && npx webpack && yarn webpack:strip && cpx -v \"./dist/*.d.ts\" ./dist/webpack/",
     "webpack:strip": "node ./scripts/tools -cmd stripWebpack -regex \"%npm_package_defs_regex%\""
   },
   "devDependencies": {
     "@types/jest": "^27.4.0",
-    "@types/node-fetch": "^2.6.1",
     "@types/webpack": "^5.28.0",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
@@ -70,7 +69,7 @@
     "cpx": "latest",
     "eslint": "^8.9.0",
     "jest": "^27.5.1",
-    "node-fetch": "=2.6.7",
+    "node-fetch": "3.2.0",
     "organize-pkg": "^1.2.3",
     "rimraf": "^3.0.2",
     "terser-webpack-plugin": "^5.3.1",
