--- a/package.json
+++ b/package.json
@@ -61,22 +61,22 @@
     "webpack:strip": "node ./scripts/tools -cmd stripWebpack -regex \"%npm_package_defs_regex%\""
   },
   "devDependencies": {
-    "@types/jest": "^27.4.0",
+    "@jeffy-g/cpx": "^1.6.4",
+    "@types/jest": "^27.4.1",
     "@types/webpack": "^5.28.0",
-    "@typescript-eslint/eslint-plugin": "^5.12.0",
-    "@typescript-eslint/parser": "^5.12.0",
-    "concurrently": "^7.0.0",
-    "cpx": "latest",
-    "eslint": "^8.9.0",
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "@typescript-eslint/parser": "^5.20.0",
+    "concurrently": "^7.1.0",
+    "eslint": "^8.14.0",
     "jest": "^27.5.1",
     "node-fetch": "3.2.3",
     "organize-pkg": "^1.2.3",
     "rimraf": "^3.0.2",
     "terser-webpack-plugin": "^5.3.1",
-    "ts-jest": "^27.1.3",
-    "ts-loader": "^9.2.6",
-    "typescript": "^4.5.5",
-    "webpack": "^5.69.1",
+    "ts-jest": "^27.1.4",
+    "ts-loader": "^9.2.8",
+    "typescript": "^4.6.3",
+    "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
   }
 }
