--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,31 +1,30 @@
-version: 2.1
-orbs:
-  # https://circleci.com/orbs/registry/orb/circleci/node
-  node: circleci/node@1.1.6 # refers to the Orbs of circleci/node as `node`
+version: 2
 jobs:
   build:
-    executor:
-      name: node/default
-      tag: "latest"
+    docker:
+    - image: node:latest
     working_directory: ~/repo
-
     steps:
-      - checkout
-      - node/with-cache:
-          dir: ~/repo/node_modules
-          cache-version: v1
-          steps:
-          - run:
-              name: install, build, test
-              command: |
-                node -v
-                npm -v
-                yarn install
-                yarn all
-                yarn test
-
+    - checkout
+    - restore_cache:
+        keys:
+        - node-deps-v1-{{ .Branch }}-{{ checksum "package.json" }}
+        - node-deps-v1-{{ .Branch }}
+        - node-deps-v1
+    - run:
+        name: install, build, test
+        command: |
+          node -v
+          npm -v
+          yarn install
+          yarn all
+          yarn test
+    - save_cache:
+        key: node-deps-v1-{{ .Branch }}-{{ checksum "package.json" }}
+        paths:
+        - ~/repo/node_modules
 workflows:
   version: 2
   build:
     jobs:
-      - build
+    - build
