--- a/package.json
+++ b/package.json
@@ -64,18 +64,18 @@
     "@jeffy-g/cpx": "^1.6.4",
     "@types/jest": "^27.4.1",
     "@types/webpack": "^5.28.0",
-    "@typescript-eslint/eslint-plugin": "^5.20.0",
-    "@typescript-eslint/parser": "^5.20.0",
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
+    "@typescript-eslint/parser": "^5.21.0",
     "concurrently": "^7.1.0",
     "eslint": "^8.14.0",
-    "jest": "^28.0.0",
+    "jest": "^28.0.3",
     "node-fetch": "3.2.4",
     "organize-pkg": "^1.2.3",
     "rimraf": "^3.0.2",
     "terser-webpack-plugin": "^5.3.1",
-    "ts-jest": "^27.1.4",
-    "ts-loader": "^9.2.8",
-    "typescript": "^4.6.3",
+    "ts-jest": "^28.0.0-next.3",
+    "ts-loader": "^9.3.0",
+    "typescript": "^4.6.4",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
   }
