--- a/package.json
+++ b/package.json
@@ -68,10 +68,10 @@
     "eslint": "^8.14.0",
     "jest": "^28.0.3",
     "node-fetch": "3.2.4",
-    "organize-pkg": "^1.2.3",
+    "organize-pkg": "^1.2.4",
     "rimraf": "^3.0.2",
     "terser-webpack-plugin": "^5.3.1",
-    "ts-jest": "^28.0.0-next.3",
+    "ts-jest": "^28.0.1",
     "ts-loader": "^9.3.0",
     "typescript": "^4.6.4",
     "webpack": "^5.72.0",
