--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     // "assumeChangesOnlyAffectDirectDependencies": true,
 
     "strict": true,
-    "removeComments": true,
+    // "removeComments": true,
 
     // ⚠️ Without this setting, typescript will issue an error (related @types/babel*
     "moduleResolution": "node",
