--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "mini-semaphore",
-  "version": "1.3.9",
+  "version": "1.3.10",
   "description": "A lightweight version of Semaphore",
   "private": false,
   "main": "./cjs/index.js",
-  "module": "./webpack-esm/index.mjs",
+  "module": "./esm/index.mjs",
   "unpkg": "./umd/index.js",
   "sideEffects": false,
   "types": "./index.d.ts",
@@ -60,21 +60,21 @@
   },
   "devDependencies": {
     "@jeffy-g/cpx": "^1.6.4",
-    "@types/jest": "^27.5.0",
+    "@types/jest": "^27.5.1",
     "@types/webpack": "^5.28.0",
-    "@typescript-eslint/eslint-plugin": "^5.22.0",
-    "@typescript-eslint/parser": "^5.22.0",
-    "concurrently": "^7.1.0",
-    "eslint": "^8.14.0",
-    "jest": "^28.0.3",
+    "@typescript-eslint/eslint-plugin": "^5.23.0",
+    "@typescript-eslint/parser": "^5.23.0",
+    "concurrently": "^7.2.0",
+    "eslint": "^8.15.0",
+    "jest": "^28.1.0",
     "node-fetch": "3.2.4",
     "organize-pkg": "^1.2.4",
     "rimraf": "^3.0.2",
     "terser-webpack-plugin": "^5.3.1",
-    "ts-jest": "^28.0.1",
+    "ts-jest": "^28.0.2",
     "ts-loader": "^9.3.0",
     "typescript": "^4.6.4",
-    "webpack": "^5.72.0",
+    "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2"
   }
 }
