--- a/package.json
+++ b/package.json
@@ -49,32 +49,32 @@
   "scripts": {
     "all": "yarn clean && yarn lint && yarn dist && yarn fire:tool copytypes",
     "build": "yarn fire:tool build",
-    "clean": "rimraf build/* dist/* logs/*.tsbuildinfo",
+    "clean": "rimraf -g build/* dist/* logs/*.tsbuildinfo",
     "dist": "yarn build && yarn fire:tool distExtra",
     "fire:tool": "bash scripts/tool.sh",
-    "ic": "rimraf yarn.lock node_modules && yarn install",
+    "ic": "rimraf -g yarn.lock node_modules && yarn install",
     "up": "yarn upgrade-interactive --latest",
     "lint": "eslint src/**/*.ts",
-    "pretest": "rimraf ./coverage/*",
+    "pretest": "rimraf -g ./coverage/*",
     "test": "bash -c \"NODE_OPTIONS=--experimental-vm-modules npx jest --coverage --silent=false -c=jest.config.js\""
   },
   "devDependencies": {
     "@jeffy-g/cpx": "^1.6.4",
-    "@types/jest": "^27.5.1",
-    "@types/webpack": "^5.28.0",
-    "@typescript-eslint/eslint-plugin": "^5.23.0",
-    "@typescript-eslint/parser": "^5.23.0",
-    "concurrently": "^7.2.0",
-    "eslint": "^8.15.0",
-    "jest": "^28.1.0",
-    "node-fetch": "3.2.4",
-    "organize-pkg": "^1.2.4",
-    "rimraf": "^3.0.2",
-    "terser-webpack-plugin": "^5.3.1",
-    "ts-jest": "^28.0.2",
-    "ts-loader": "^9.3.0",
-    "typescript": "^4.6.4",
-    "webpack": "^5.72.1",
-    "webpack-cli": "^4.9.2"
+    "@types/jest": "^29.5.6",
+    "@types/webpack": "^5.28.3",
+    "@typescript-eslint/eslint-plugin": "^6.8.0",
+    "@typescript-eslint/parser": "^6.8.0",
+    "concurrently": "^8.2.1",
+    "eslint": "^8.51.0",
+    "jest": "^29.7.0",
+    "node-fetch": "3.3.2",
+    "organize-pkg": "^1.3.0",
+    "rimraf": "^5.0.5",
+    "terser-webpack-plugin": "^5.3.9",
+    "ts-jest": "^29.1.1",
+    "ts-loader": "^9.5.0",
+    "typescript": "^5.2.2",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
   }
 }
