--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mini-semaphore",
-  "version": "1.3.10",
+  "version": "1.3.11",
   "description": "A lightweight version of Semaphore",
   "private": false,
   "main": "./cjs/index.js",
@@ -47,7 +47,7 @@
     "typescript"
   ],
   "scripts": {
-    "all": "yarn clean && yarn lint && yarn dist && yarn fire:tool copytypes",
+    "all": "yarn lint & yarn clean && yarn dist && yarn fire:tool copytypes",
     "build": "yarn fire:tool build",
     "clean": "rimraf -g build/* dist/* logs/*.tsbuildinfo",
     "dist": "yarn build && yarn fire:tool distExtra",
@@ -55,6 +55,7 @@
     "ic": "rimraf -g yarn.lock node_modules && yarn install",
     "up": "yarn upgrade-interactive --latest",
     "lint": "eslint src/**/*.ts",
+    "v:tag": "yarn fire:tool patch_with_tag",
     "pretest": "rimraf -g ./coverage/*",
     "test": "bash -c \"NODE_OPTIONS=--experimental-vm-modules npx jest --coverage --silent=false -c=jest.config.js\""
   },
@@ -69,6 +70,7 @@
     "jest": "^29.7.0",
     "node-fetch": "3.3.2",
     "organize-pkg": "^1.3.0",
+    "replace": "^1.2.2",
     "rimraf": "^5.0.5",
     "terser-webpack-plugin": "^5.3.9",
     "ts-jest": "^29.1.1",
