--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "lint": "bash -c \"ESLINT_USE_FLAT_CONFIG=false npx eslint src/**/*.ts\"",
     "v:tag": "yarn fire:tool patch_with_tag",
     "pretest": "rimraf -g ./coverage/*",
-    "test": "bash -c \"NODE_OPTIONS=--experimental-vm-modules npx jest --coverage --silent=false -c=jest.config.js\""
+    "test": "bash -c \"NODE_OPTIONS=--experimental-vm-modules npx jest --coverage --silent=false -c=jest.config.js\"",
+    "stress:demo": "node ./scripts/stress-test.mjs -x"
   },
   "devDependencies": {
     "@jeffy-g/cpx": "^1.6.4",
