--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "typescript"
   ],
   "scripts": {
-    "all": "yarn lint & yarn clean && yarn dist && yarn fire:tool copytypes",
+    "all": "yarn clean && yarn lint && yarn dist && yarn fire:tool copytypes",
     "build": "yarn fire:tool build",
     "clean": "rimraf -g build/* dist/* logs/*.tsbuildinfo",
     "dist": "yarn build && yarn fire:tool distExtra",
@@ -61,25 +61,26 @@
     "stress:demo": "node ./scripts/stress-test.mjs -x"
   },
   "devDependencies": {
-    "@jeffy-g/cpx": "^1.6.4",
-    "@stylistic/eslint-plugin": "^3.0.0",
+    "@jeffy-g/cpx": "^1.6.6",
+    "@stylistic/eslint-plugin": "^3.0.1",
     "@types/jest": "^29.5.6",
     "@types/webpack": "^5.28.3",
-    "@typescript-eslint/eslint-plugin": "^8.0.0",
-    "@typescript-eslint/parser": "^8.0.0",
-    "concurrently": "^9.0.0",
-    "eslint": "^9.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.22.0",
+    "@typescript-eslint/parser": "^8.22.0",
+    "concurrently": "^9.1.2",
+    "eslint": "^9.19.0",
     "jest": "^29.7.0",
     "node-fetch": "3.3.2",
     "organize-pkg": "^1.3.0",
     "replace": "^1.2.2",
     "rimraf": "^6.0.0",
-    "terser-webpack-plugin": "^5.3.9",
+    "terser-webpack-plugin": "^5.3.11",
     "tin-args": "^0.0.14",
     "ts-jest": "^29.1.1",
-    "ts-loader": "^9.5.0",
-    "typescript": "^5.2.2",
+    "ts-loader": "^9.5.2",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.22.0",
     "webpack": "^5.89.0",
-    "webpack-cli": "^6.0.0"
+    "webpack-cli": "^6.0.1"
   }
 }
