eslint.config.mjs - I finally managed to make a config file that works with the latest eslint.
Because my English skills are poor, I waste time every time I introduce a package that is not well-developed...

--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "typescript"
   ],
   "scripts": {
-    "all": "yarn clean && yarn lint && yarn dist && yarn fire:tool copytypes",
+    "all": "yarn clean && eslint && yarn dist && yarn fire:tool copytypes",
     "build": "yarn fire:tool build",
     "clean": "rimraf -g build/* dist/* logs/*.tsbuildinfo",
     "dist": "yarn build && yarn fire:tool distExtra",
