chore: Add placeholder for future TypeScript declaration generation
- Added a `//pendding` field in `package.json` to document the future plan for automating the generation of `index.d.ts` using `tsc -p ./src/tsconfig-dts.jsonc`.
- Currently, `src/index.d.ts` is being updated manually, but this placeholder ensures the command is ready for future implementation.

No functional changes introduced.

--- a/package.json
+++ b/package.json
@@ -84,5 +84,8 @@
     "typescript-eslint": "^8.32.0",
     "webpack": "^5.99.8",
     "webpack-cli": "^6.0.1"
+  },
+  "//pendding": {
+    "emit:dts": "tsc -p ./src/tsconfig-dts.jsonc"
   }
 }
