--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "compilerOptions": {
-    // "noCheck": true,
     "incremental": true,
     "tsBuildInfoFile": "./logs/cjs.tsbuildinfo",
 
     "skipDefaultLibCheck": true,
-    "skipLibCheck": true,
+    // "skipLibCheck": true,
+
     // TIP: on ts v3.8
     // When this option is enabled, TypeScript will avoid rechecking/rebuilding all truly possibly-affected files,
     // and only recheck/rebuild files that have changed as well as files that directly import them.
@@ -13,8 +13,6 @@
     // "assumeChangesOnlyAffectDirectDependencies": true,
 
     "strict": true,
-    // "removeComments": true,
-
     // ⚠️ Without this setting, typescript will issue an error (related @types/babel*
     "moduleResolution": "node",
 
@@ -22,10 +20,10 @@
     // TIP: always specify "commonjs" for nodejs. "es6" becomes esma module
     "module": "commonjs",
 
-    // Avoid explicitly setting the `sourceMap` option, for code coverage to indicate the exact line.
-    // "sourceMap": false,
-
     "baseUrl": "./src",
+    "rootDirs": [
+      "./src",
+    ],
     "outDir": "./build/cjs"
   },
   "exclude": [
