feat: Update dependencies and CI configuration
Update various development dependencies to their latest versions.
- Updated CircleCI config: codecov orb (5.4.0 -> 5.4.3) and cimg/node image (23.11 -> 25.2.1).
- Updated devDependencies in package.json and yarn.lock, including Jest, ESLint, TypeScript, Webpack, and related plugins/parsers.
- Added new entries to .gitignore for Gemini-related files, documentation, and build artifacts.

--- a/.gitignore
+++ b/.gitignore
@@ -117,3 +117,12 @@ bin
 memo*
 raw-type-volume-map.js
 extra-tests/web/mini-semaphore/webpack
+.gemini
+/.github/*-instructions.md
+/CHANGELOG.md
+/cliff.toml
+/note.txt
+/readme-next.md
+/scripts/dts-test.mjs
+/src/index-pending.d.ts
+/src/tsconfig-dts.jsonc
