--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "tsBuildInfoFile": "./logs/cjs.tsbuildinfo",
 
     "skipDefaultLibCheck": true,
-    // "skipLibCheck": true,
+    "skipLibCheck": true,
 
     // TIP: on ts v3.8
     // When this option is enabled, TypeScript will avoid rechecking/rebuilding all truly possibly-affected files,
